--- a/index.html
+++ b/index.html
@@ -1,11 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Admin Dashboard</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="search-bar">
+                <div class="search-icon">Icon</div>
+                <input type="text" name="searchbar" id="searchbar" class="search-bar-input">
+            </div>
+            <div class="profile">
+                <div></div>
+                <div class="profile-img-bell">ring</div>
+                <div class="profile-img-picture">img</div>
+                <div class="profile-name">Eike Passuth</div>
+            </div>
+            <div class="greeting">
+                <div class="greeting-img">img</div>
+                <div class="greeting-text-container">
+                    <div class="greeting-greet">Hi there,</div>
+                    <div class="greeting-person">Eike Passuth (@Eike)</div>
+                </div>
+            </div>
+            <div class="header-buttons">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-title">
+                <img src="" alt="" class="sidebar-title-img">
+                <p class="sidebar-title-text">Dashboard</p>
+            </div>
+            <ul class="sidebar-topics">
+                <li>
+                    <img src="" alt="">
+                    <div>Home</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Profile</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Messages</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>History</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Tasks</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Communities</div>
+                </li>
+            </ul>
+            <ul class="sidebar-settings">
+                <li>
+                    <img src="" alt="">
+                    <div>Settings</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Support</div>
+                </li>
+                <li>
+                    <img src="" alt="">
+                    <div>Privacy</div>
+                </li>
+            </ul>
+        </div>
+        <div class="main-content">
+            <div class="content-projects">
+                <h1>Your Projects</h1>
+                <div class="card">
+                    <h1>Card 1</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Porro praesentium delectus sequi ipsa
+                        aut commodi. Ex omnis in sapiente. Tempora odio ratione pariatur possimus! Laudantium atque
+                        mollitia placeat iste tempore!</p>
+                </div>
+                <div class="card">
+                    <h1>Card 2</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita sequi voluptates tempora fuga
+                        corporis exercitationem, fugiat consequuntur, cum repellendus saepe ut, praesentium aut ea
+                        aspernatur dolores maiores nostrum! Inventore, aperiam.</p>
+                </div>
+                <div class="card">
+                    <h1>Card 3</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aliquid repellendus itaque
+                        quibusdam quod ipsam vitae! Sint, eligendi et ratione recusandae minima vero, sit expedita
+                        accusantium, consectetur laudantium magni odit!</p>
+                </div>
+                <div class="card">
+                    <h1>Card 4</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem asperiores dignissimos totam,
+                        atque nisi voluptatum! At, quo et aut illo non animi aliquid vitae deserunt culpa consectetur
+                        deleniti fugiat nisi.</p>
+                </div>
+                <div class="card">
+                    <h1>Card 5</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Harum quis porro possimus vero, iure
+                        doloribus expedita, dolor nihil id maiores ex officiis. Necessitatibus, illum dicta officia
+                        aspernatur recusandae eos unde.</p>
+                </div>
+                <div class="card">
+                    <h1>Card 6</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut maxime fugit aut velit harum, vitae
+                        alias, quisquam, porro odio soluta iste! Repellendus eius fugiat nihil ratione, laudantium sit
+                        quis suscipit!</p>
+                </div>
+            </div>
+            <div class="content-announcements">
+                <h1>Announcements</h1>
+                <div class="ann-cards">
+
+                    <div class="ann-card">
+                        <h2>Announcement 1</h2>
+                        <p></p>
+                        <hr>
+                    </div>
+                    <div class="ann-card">
+                        <h2>Announcement 2</h2>
+                        <p></p>
+                        <hr>
+                    </div>
+                    <div class="ann-card">
+                        <h2>Announcement 3</h2>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div class="content-trending">
+                <h1>Trending</h1>
+                <div class="trending-cards">
+                    <div class="trending-card">
+                        <img src="" alt="">
+                        <div>
+                            <div class="trending-card-name">Name1</div>
+                            <div class="trending-card-title"></div>
+                        </div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="" alt="">
+                        <div>
+                            <div class="trending-card-name">Name2</div>
+                            <div class="trending-card-title"></div>
+                        </div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="" alt="">
+                        <div>
+                            <div class="trending-card-name">Name3</div>
+                            <div class="trending-card-title"></div>
+                        </div>
+                    </div>
+                    <div class="trending-card">
+                        <img src="" alt="">
+                        <div>
+                            <div class="trending-card-name">Name4</div>
+                            <div class="trending-card-title"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
