--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Euphoria+Script&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -36,46 +42,46 @@
         </div>
         <div class="sidebar">
             <div class="sidebar-title">
-                <img src="" alt="" class="sidebar-title-img">
+                <img src="res/sphere.svg" alt="" class="sidebar-title-img">
                 <p class="sidebar-title-text">Dashboard</p>
             </div>
             <ul class="sidebar-topics">
                 <li>
-                    <img src="" alt="">
+                    <img src="res/home.svg" alt="">
                     <div>Home</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/card-account-details.svg" alt="">
                     <div>Profile</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/message.svg" alt="">
                     <div>Messages</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/clock-time-three.svg" alt="">
                     <div>History</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/file-multiple.svg" alt="">
                     <div>Tasks</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/hexagon-multiple.svg" alt="">
                     <div>Communities</div>
                 </li>
             </ul>
             <ul class="sidebar-settings">
                 <li>
-                    <img src="" alt="">
+                    <img src="res/cog.svg" alt="">
                     <div>Settings</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/chat-question.svg" alt="">
                     <div>Support</div>
                 </li>
                 <li>
-                    <img src="" alt="">
+                    <img src="res/shield-check.svg" alt="">
                     <div>Privacy</div>
                 </li>
             </ul>
